<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginRegister.RegisterActivity">

        <View
            android:id="@+id/topView"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:background="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/view5"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:background="@drawable/wave1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/topView" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/logo"
            android:contentDescription="TOP ICON" />
        <TextView
            android:id="@+id/topText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="48dp"
            android:text="Create Your Account"
            android:textColor="@android:color/white"
            android:textSize="32sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/imageView5"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/topView"
            app:layout_constraintTop_toTopOf="parent" />


        <LinearLayout
            android:id="@+id/linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:selectAllOnFocus="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.415">
                <EditText
                    android:id="@+id/register_firstName"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:singleLine="true"
                    android:hint="First Name"
                    android:inputType="textPersonName"/>

                <EditText
                    android:id="@+id/register_lastName"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:hint="Last Name"
                    android:inputType="textPersonName"/>
        </LinearLayout>

        <EditText
            android:id="@+id/register_email"
            android:drawableRight="@drawable/ic_email_black_24dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:singleLine="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linear"
            />
        <EditText
            android:id="@+id/register_username"
            android:drawableRight="@drawable/ic_person"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:singleLine="true"
            android:layout_marginEnd="50dp"
            android:hint="User Name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register_email"
            />
        <LinearLayout
            android:id="@+id/linearPhone"
            android:singleLine="true"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register_username"
            android:weightSum="2"
            android:orientation="horizontal">
                <EditText
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:textSize="20sp"
                    android:layout_weight="1"
                    android:id="@+id/codePhone"
                    android:inputType="none"
                    android:gravity="center"
                    android:text="+62"/>
                <EditText
                    android:layout_weight="1"
                    android:id="@+id/register_phone"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="Phone Number"
                    android:drawableRight="@drawable/ic_call_black_24dp"
                    android:inputType="phone"
                    android:singleLine="true"
                    android:maxLength="11"
                    android:selectAllOnFocus="true"
                    />
        </LinearLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInput"
            app:passwordToggleEnabled="true"
            app:passwordToggleDrawable="@drawable/ic_hide"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearPhone" >
                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/register_pass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionDone"
                    android:singleLine="true"
                    android:inputType="textPassword"
                    android:selectAllOnFocus="true"
                   />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInput1"
            app:passwordToggleEnabled="true"
            app:passwordToggleDrawable="@drawable/ic_hide"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInput" >
                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/register_repass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Confirm Password"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionDone"
                    android:singleLine="true"
                    android:inputType="textPassword"
                    android:selectAllOnFocus="true"
                    />
        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:layout_width="wrap_content"
            android:id="@+id/already_member"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:gravity="end"
            android:text="Already a Member, Click Here!"
            android:textColor="#0000FF"
            app:layout_constraintBottom_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInput1"
            app:layout_constraintVertical_bias="0" />
        <Button
            android:id="@+id/btnRegister"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="32dp"
            android:background="@drawable/round_bg1"
            android:text="REGISTER"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/already_member" />
</androidx.constraintlayout.widget.ConstraintLayout>